[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/sharkleft0.png" type="Texture" id=1]
[ext_resource path="res://images/sharkleft1.png" type="Texture" id=2]
[ext_resource path="res://images/shark1.png" type="Texture" id=3]
[ext_resource path="res://images/shark5.png" type="Texture" id=4]
[ext_resource path="res://images/sparkel.png" type="Texture" id=5]
[ext_resource path="res://SharkPlus.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "left",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "right",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="SharkPlus" type="Node2D"]
script = ExtResource( 6 )

[node name="Shark" type="Area2D" parent="."]
collision_layer = 4096

[node name="AnimSprite" type="AnimatedSprite" parent="Shark"]
scale = Vector2( 0.6, 0.7 )
frames = SubResource( 1 )
animation = "right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shark"]
position = Vector2( 35, 9 )
scale = Vector2( 8, 1.6 )
shape = SubResource( 2 )

[node name="Flag" type="Area2D" parent="."]
position = Vector2( -106, 2 )
collision_layer = 8192

[node name="Sprite" type="Sprite" parent="Flag"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag"]
scale = Vector2( 3, 3 )
shape = SubResource( 3 )
[connection signal="area_entered" from="Shark" to="." method="_on_Shark_area_entered"]
[connection signal="area_entered" from="Flag" to="." method="_on_Flag_area_entered"]
